presentation version of project 1

--- a/src/main/resources/public/fmgrChangeRequest.html
+++ b/src/main/resources/public/fmgrChangeRequest.html
@@ -6,6 +6,7 @@
             Employee can view requests. 
         -->
         <script src="financemgr.js"></script>
+        <title>ERS Finance Manager Change Request Status</title>
         <link rel="stylesheet" href="tablestyles.css">
         <link rel="stylesheet" href="commonstyles.css">
         <link rel="stylesheet" href="navbarstyles.css">
@@ -39,7 +40,7 @@
                 <input class="form-control" id="num" type="number">
             </label>
             <br>
-            <button type="button" class="btn btn-primary" onclick="changeStatus()" id="change">Change Status</button>
+            <button type="button" class="btn btn-primary" onclick="changeStatus()" id="changeStatus">Change Status</button>
             <div id="changeConfirm"></div>
         </div>
     </body>
