--- a/src/main/resources/public/fmgrViewRequests.html
+++ b/src/main/resources/public/fmgrViewRequests.html
@@ -5,6 +5,7 @@
             Employee requests page
             Employee can view requests. 
         -->
+        <title>ERS Finance Manager View Requests</title>
         <script src="financemgr.js"></script>
         <link rel="stylesheet" href="tablestyles.css">
         <link rel="stylesheet" href="commonstyles.css">
